# LearningGreekBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  ci.sh  config.py  pyproject.toml  requirements.txt
cogs/: admindev.py  beginnercommands.py  faq.py  general.py  markov.py
core/: bot_client.py  check_utils.py  decorators.py  sync_utils.py  utils.py
data/: faq_answers.py
src/learning_greek_bot/: bot.py  config.py
src/learning_greek_bot/cogs/: admindev.py  base.py  beginnercommands.py  faq.py  general.py  markov.py
src/learning_greek_bot/core/: bot_client.py  check_utils.py  decorators.py  utils.py
src/learning_greek_bot/data/: faq_answers.py
