[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "learning-greek-bot"
version = "0.1.0"
description = "A discord bot for the Learning Greek server"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
run-bot = "bot:main"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
